# cpp_conan_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_dependencies.md  README_references.md  README_structure.md  README_usage.md  codecov.yml  conanfile.py  options.cmake
.github/actions/parse_environment/: action.yml
.github/actions/setup_cache/: action.yml
.github/actions/setup_conan/: action.yml
.github/workflows/: ci.yml  clang-format-check.yml  codeql.yml
cmake/: README.md  add_test.cmake  enable_customized_project_options.cmake  fetch_project_options.cmake  install_conan_runtime_libs.cmake  replace_this_custom_project_options.cmake  replace_this_fetch_project_options.cmake  replace_this_options.cmake  rpath.cmake  sample_project_custom_project_options.cmake  sample_project_fetch_project_options.cmake  sample_project_name_custom_project_options.cmake  sample_project_name_fetch_project_options.cmake  sample_project_name_options.cmake  sample_project_options.cmake
conan/profiles/: #-#-#-clang-#-#  #-#-#-gcc-#-#  #-#-#-msvc-#-#  README.md  _common  macos-#-#-gcc-13-#  macos-#-x86_64-gcc-13-#  macos-#-x86_64-gcc-14-#  macos-12-clang-x86_64  macos-12-gcc-x86_64  ubuntu-22.04-clang-x86_64  ubuntu-22.04-gcc-x86_64  windows-#-#-clang-#-#  windows-#-#-clang-16.0.6-#  windows-#-x86_64-clang-#-#  windows-2022-clang-x86_64  windows-2022-gcc-x86_64  windows-2022-msvc-x86_64
fuzz_test/: CMakeLists.txt  fuzz_test.cpp
my_app/: CMakeLists.txt
my_app/include/my_app/: concat.hpp  my_app_main.hpp
my_app/src/: concat.cpp  main.cpp  my_app_main.cpp
my_app/test/: CMakeLists.txt  concat.cpp
my_header_only_lib/: CMakeLists.txt
my_header_only_lib/include/my_header_only_lib/: to_string.hpp
my_header_only_lib/test/: CMakeLists.txt  to_string.cpp
my_lib/: CMakeLists.txt
my_lib/include/my_lib/: sort.hpp
my_lib/src/: sort.cpp
my_lib/test/: CMakeLists.txt  sort.cpp
sample_app/: CMakeLists.txt
sample_app/include/my_app/: sample_app_main.hpp
sample_app/include/sample_app/: concat.hpp
sample_app/src/: concat.cpp  main.cpp  sample_app_main.cpp
sample_app/test/: CMakeLists.txt  concat.cpp
sample_header_only_lib/: CMakeLists.txt
sample_header_only_lib/include/sample_header_only_lib/: concat.hpp  to_string.hpp
sample_header_only_lib/test/: CMakeLists.txt  concat.cpp  to_string.cpp
sample_lib/: CMakeLists.txt
sample_lib/include/sample_lib/: concat.hpp  sort.hpp
sample_lib/src/: concat.cpp  sort.cpp
sample_lib/test/: CMakeLists.txt  concat.cpp  sort.cpp
script/: match_conan_profile.py  rename.py  rename_project.py
